--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <link rel="manifest" href="/manifest.json" />
     
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon16.png?v=1" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon32.png?v=1" />
 
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
   </head>
