--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link rel="manifest" href="/manifest.json" />
-    
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon16.png?v=1" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon32.png?v=1" />
+    <link rel="manifest" href="/manifest.json" /><head>
+
+
+  <link rel="icon" type="image/png" sizes="32x32" href="/icon32.png?v=2" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/icon16.png?v=2" />
+  
+  <link rel="apple-touch-icon" href="/icon128.png">
 
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
   </head>
