--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <link rel="icon" type="image/png" sizes="64x64" href="/icon64.png" />
 <link rel="icon" type="image/png" sizes="128x128" href="/icon128.png" />
   
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="MATRAKA">
 
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
   </head>
