--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link rel="manifest" href="/manifest.json" /><head>
 
 
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/icon16.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="/icon32.png" />
-<link rel="icon" type="image/png" sizes="64x64" href="/icon64.png" />
-<link rel="icon" type="image/png" sizes="128x128" href="/icon128.png" />
-  
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="MATRAKA">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icon16.png?v=2" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/icon32.png?v=2" />
+  <link rel="icon" type="image/png" sizes="64x64" href="/icon64.png?v=2" />
+  <link rel="icon" type="image/png" sizes="128x128" href="/icon128.png?v=2" />
+
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" href="/app-icon128.png">
 
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
   </head>
